--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             background-size: 200% 200%;
             flex-direction: column;
             color: #d8d8d8;
+            padding: 20px;
         }
 
         @keyframes gradient-animation {
@@ -123,6 +124,54 @@
         .equals-row { grid-column: span 2; }
         .clear-col { grid-row: span 2; }
 
+        /* === Mobile Responsiveness === */
+        @media (max-width: 500px) {
+            body {
+                padding: 10px;
+            }
+            .calculator-container {
+                width: 100%;
+                padding: 15px;
+            }
+            .buttons-grid {
+                grid-template-columns: repeat(4, 1fr);
+                gap: 8px;
+            }
+            .button {
+                width: 100%;
+                height: 60px;
+                font-size: 18px;
+            }
+            .function {
+                font-size: 14px;
+            }
+            .equals {
+                font-size: 24px;
+            }
+            .display {
+                padding: 15px;
+                margin-bottom: 15px;
+            }
+            .input-box {
+                font-size: 36px;
+            }
+            /* Adjusting button layout for mobile */
+            .buttons-grid button[data-value="!"] { display: none; }
+            .buttons-grid button[data-value="^"] { grid-column: span 1; }
+            .buttons-grid button[data-value="*"] { grid-column: span 1; }
+            .buttons-grid button[data-value="."] { grid-column: span 1; }
+            .buttons-grid button[data-value="="] { grid-column: span 2; }
+            .buttons-grid button[data-value="DEL"] { grid-column: span 1; }
+            .buttons-grid button[data-value="AC"] { grid-column: span 1; }
+
+            .buttons-grid button[data-value="log"] { grid-column: span 1; }
+            .buttons-grid button[data-value="ln"] { grid-column: span 1; }
+            .buttons-grid button[data-value="sqrt("] { grid-column: span 1; }
+            .buttons-grid button[data-value="%"] { grid-column: span 1; }
+
+            .buttons-grid button[data-value="pi"] { grid-column: span 1; }
+            .buttons-grid button[data-value="e"] { grid-column: span 1; }
+        }
     </style>
 </head>
 <body>
@@ -133,13 +182,13 @@
         </div>
 
         <div class="buttons-grid">
-            <button class="button function" data-value="sin(">sin</button>
-            <button class="button function" data-value="cos(">cos</button>
-            <button class="button function" data-value="tan(">tan</button>
-            <button class="button function" data-value="log10(">log</button>
-            <button class="button function" data-value="log(">ln</button>
+            <button class="button function" data-value="sin(" style="font-size: 16px;">sin</button>
+            <button class="button function" data-value="cos(" style="font-size: 16px;">cos</button>
+            <button class="button function" data-value="tan(" style="font-size: 16px;">tan</button>
+            <button class="button function" data-value="log10(" style="font-size: 16px;">log</button>
+            <button class="button function" data-value="log(" style="font-size: 16px;">ln</button>
 
-            <button class="button function" data-value="sqrt(">√</button>
+            <button class="button function" data-value="sqrt(" style="font-size: 16px;">√</button>
             <button class="button function" data-value="^">^</button>
             <button class="button function" data-value="(">(</button>
             <button class="button function" data-value=")">)</button>
@@ -202,11 +251,25 @@
 
                 if (value === '=') {
                     try {
-                        const sanitizedExpression = expression.replace(/π/g, 'pi').replace(/e/g, 'e').replace(/\^/g, '**');
-                        const finalResult = math.evaluate(sanitizedExpression);
-                        historyBox.textContent = expression + ' =';
-                        inputBox.textContent = formatResult(finalResult);
-                        expression = finalResult.toString();
+                        let sanitizedExpression = expression.replace(/π/g, 'pi').replace(/e/g, 'e').replace(/\^/g, '**');
+
+                        if (sanitizedExpression.includes('!')) {
+                            // Custom factorial calculation
+                            let parts = sanitizedExpression.split('!');
+                            let num = math.evaluate(parts[0]);
+                            if (num < 0 || !Number.isInteger(num)) {
+                                throw new Error("Factorial of a non-integer or negative number");
+                            }
+                            let factorialResult = math.factorial(num);
+                            historyBox.textContent = expression + ' =';
+                            inputBox.textContent = formatResult(factorialResult);
+                            expression = factorialResult.toString();
+                        } else {
+                            const finalResult = math.evaluate(sanitizedExpression);
+                            historyBox.textContent = expression + ' =';
+                            inputBox.textContent = formatResult(finalResult);
+                            expression = finalResult.toString();
+                        }
                         resultDisplayed = true;
                     } catch (e) {
                         inputBox.textContent = 'Error';
@@ -217,7 +280,6 @@
                     return;
                 }
 
-                // If a new calculation starts after a result is shown
                 if (resultDisplayed) {
                     if (isOperator(value)) {
                         expression = inputBox.textContent + value;
@@ -235,11 +297,9 @@
 
         function formatResult(value) {
             if (typeof value === 'number') {
-                // Handle large numbers and scientific notation
-                if (Math.abs(value) > 1e15 || Math.abs(value) < 1e-15 && value !== 0) {
+                if (Math.abs(value) > 1e15 || (Math.abs(value) < 1e-15 && value !== 0)) {
                     return value.toExponential(10);
                 }
-                // Fix floating point issues and limit decimal places
                 return math.format(value, { precision: 14 });
             }
             return value.toString();
@@ -272,13 +332,11 @@
                 return; // Ignore other keys
             }
 
-            // Find the corresponding button and trigger click
             const buttonToClick = document.querySelector(`[data-value="${buttonValue}"]`);
             if (buttonToClick) {
                 buttonToClick.click();
             }
         });
-
     </script>
 </body>
 </html>
